Objlng/AnnotParser/_build/default/objlngparser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
program' -> . program [ # ]
## Transitions:
-- On error shift to state 1
-- On VAR shift to state 2
-- On FUNCTION shift to state 14
-- On CLASS shift to state 108
-- On variable_decl shift to state 126
-- On program shift to state 127
-- On list(decl) shift to state 128
-- On function_def shift to state 130
-- On decl shift to state 131
-- On class_def shift to state 133
## Reductions:
-- On EOF
--   reduce production list(decl) ->

State 1:
## Known stack suffix:
## error
## LR(1) items:
program -> error . [ # ]
## Transitions:
## Reductions:
-- On #
--   reduce production program -> error

State 2:
## Known stack suffix:
## VAR
## LR(1) items:
variable_decl -> VAR . typed_ident SEMI [ WHILE VAR THIS RETURN PUTCHAR NEW LPAR IF IDENT FUNCTION EOF END CST CLASS BOOL ]
## Transitions:
-- On TYP_VOID shift to state 3
-- On TYP_INT shift to state 4
-- On TYP_BOOL shift to state 5
-- On LBRACKET shift to state 6
-- On IDENT shift to state 7
-- On typed_ident shift to state 10
-- On typ shift to state 12
## Reductions:

State 3:
## Known stack suffix:
## TYP_VOID
## LR(1) items:
typ -> TYP_VOID . [ RBRACKET IDENT COMMA ]
## Transitions:
## Reductions:
-- On RBRACKET IDENT COMMA
--   reduce production typ -> TYP_VOID

State 4:
## Known stack suffix:
## TYP_INT
## LR(1) items:
typ -> TYP_INT . [ RBRACKET IDENT COMMA ]
## Transitions:
## Reductions:
-- On RBRACKET IDENT COMMA
--   reduce production typ -> TYP_INT

State 5:
## Known stack suffix:
## TYP_BOOL
## LR(1) items:
typ -> TYP_BOOL . [ RBRACKET IDENT COMMA ]
## Transitions:
## Reductions:
-- On RBRACKET IDENT COMMA
--   reduce production typ -> TYP_BOOL

State 6:
## Known stack suffix:
## LBRACKET
## LR(1) items:
typ -> LBRACKET . typ RBRACKET [ RBRACKET IDENT COMMA ]
## Transitions:
-- On TYP_VOID shift to state 3
-- On TYP_INT shift to state 4
-- On TYP_BOOL shift to state 5
-- On LBRACKET shift to state 6
-- On IDENT shift to state 7
-- On typ shift to state 8
## Reductions:

State 7:
## Known stack suffix:
## IDENT
## LR(1) items:
typ -> IDENT . [ RBRACKET IDENT COMMA ]
## Transitions:
## Reductions:
-- On RBRACKET IDENT COMMA
--   reduce production typ -> IDENT

State 8:
## Known stack suffix:
## LBRACKET typ
## LR(1) items:
typ -> LBRACKET typ . RBRACKET [ RBRACKET IDENT COMMA ]
## Transitions:
-- On RBRACKET shift to state 9
## Reductions:

State 9:
## Known stack suffix:
## LBRACKET typ RBRACKET
## LR(1) items:
typ -> LBRACKET typ RBRACKET . [ RBRACKET IDENT COMMA ]
## Transitions:
## Reductions:
-- On RBRACKET IDENT COMMA
--   reduce production typ -> LBRACKET typ RBRACKET

State 10:
## Known stack suffix:
## VAR typed_ident
## LR(1) items:
variable_decl -> VAR typed_ident . SEMI [ WHILE VAR THIS RETURN PUTCHAR NEW LPAR IF IDENT FUNCTION EOF END CST CLASS BOOL ]
## Transitions:
-- On SEMI shift to state 11
## Reductions:

State 11:
## Known stack suffix:
## VAR typed_ident SEMI
## LR(1) items:
variable_decl -> VAR typed_ident SEMI . [ WHILE VAR THIS RETURN PUTCHAR NEW LPAR IF IDENT FUNCTION EOF END CST CLASS BOOL ]
## Transitions:
## Reductions:
-- On WHILE VAR THIS RETURN PUTCHAR NEW LPAR IF IDENT FUNCTION EOF END CST CLASS BOOL
--   reduce production variable_decl -> VAR typed_ident SEMI

State 12:
## Known stack suffix:
## typ
## LR(1) items:
typed_ident -> typ . IDENT [ SEMI RPAR COMMA ]
## Transitions:
-- On IDENT shift to state 13
## Reductions:

State 13:
## Known stack suffix:
## typ IDENT
## LR(1) items:
typed_ident -> typ IDENT . [ SEMI RPAR COMMA ]
## Transitions:
## Reductions:
-- On SEMI RPAR COMMA
--   reduce production typed_ident -> typ IDENT

State 14:
## Known stack suffix:
## FUNCTION
## LR(1) items:
function_def -> FUNCTION . fun_def [ VAR FUNCTION EOF CLASS ]
## Transitions:
-- On TYP_VOID shift to state 3
-- On TYP_INT shift to state 4
-- On TYP_BOOL shift to state 5
-- On LBRACKET shift to state 6
-- On IDENT shift to state 7
-- On typ shift to state 15
-- On fun_def shift to state 107
## Reductions:

State 15:
## Known stack suffix:
## typ
## LR(1) items:
fun_def -> typ . IDENT LPAR loption(separated_nonempty_list(COMMA,typed_ident)) RPAR BEGIN list(variable_decl) list(instruction) END [ VAR METHOD FUNCTION EOF END CLASS ]
## Transitions:
-- On IDENT shift to state 16
## Reductions:

State 16:
## Known stack suffix:
## typ IDENT
## LR(1) items:
fun_def -> typ IDENT . LPAR loption(separated_nonempty_list(COMMA,typed_ident)) RPAR BEGIN list(variable_decl) list(instruction) END [ VAR METHOD FUNCTION EOF END CLASS ]
## Transitions:
-- On LPAR shift to state 17
## Reductions:

State 17:
## Known stack suffix:
## typ IDENT LPAR
## LR(1) items:
fun_def -> typ IDENT LPAR . loption(separated_nonempty_list(COMMA,typed_ident)) RPAR BEGIN list(variable_decl) list(instruction) END [ VAR METHOD FUNCTION EOF END CLASS ]
## Transitions:
-- On TYP_VOID shift to state 3
-- On TYP_INT shift to state 4
-- On TYP_BOOL shift to state 5
-- On LBRACKET shift to state 6
-- On IDENT shift to state 7
-- On typed_ident shift to state 18
-- On typ shift to state 12
-- On separated_nonempty_list(COMMA,typed_ident) shift to state 21
-- On loption(separated_nonempty_list(COMMA,typed_ident)) shift to state 22
## Reductions:
-- On RPAR
--   reduce production loption(separated_nonempty_list(COMMA,typed_ident)) ->

State 18:
## Known stack suffix:
## typed_ident
## LR(1) items:
separated_nonempty_list(COMMA,typed_ident) -> typed_ident . [ RPAR ]
separated_nonempty_list(COMMA,typed_ident) -> typed_ident . COMMA separated_nonempty_list(COMMA,typed_ident) [ RPAR ]
## Transitions:
-- On COMMA shift to state 19
## Reductions:
-- On RPAR
--   reduce production separated_nonempty_list(COMMA,typed_ident) -> typed_ident

State 19:
## Known stack suffix:
## typed_ident COMMA
## LR(1) items:
separated_nonempty_list(COMMA,typed_ident) -> typed_ident COMMA . separated_nonempty_list(COMMA,typed_ident) [ RPAR ]
## Transitions:
-- On TYP_VOID shift to state 3
-- On TYP_INT shift to state 4
-- On TYP_BOOL shift to state 5
-- On LBRACKET shift to state 6
-- On IDENT shift to state 7
-- On typed_ident shift to state 18
-- On typ shift to state 12
-- On separated_nonempty_list(COMMA,typed_ident) shift to state 20
## Reductions:

State 20:
## Known stack suffix:
## typed_ident COMMA separated_nonempty_list(COMMA,typed_ident)
## LR(1) items:
separated_nonempty_list(COMMA,typed_ident) -> typed_ident COMMA separated_nonempty_list(COMMA,typed_ident) . [ RPAR ]
## Transitions:
## Reductions:
-- On RPAR
--   reduce production separated_nonempty_list(COMMA,typed_ident) -> typed_ident COMMA separated_nonempty_list(COMMA,typed_ident)

State 21:
## Known stack suffix:
## separated_nonempty_list(COMMA,typed_ident)
## LR(1) items:
loption(separated_nonempty_list(COMMA,typed_ident)) -> separated_nonempty_list(COMMA,typed_ident) . [ RPAR ]
## Transitions:
## Reductions:
-- On RPAR
--   reduce production loption(separated_nonempty_list(COMMA,typed_ident)) -> separated_nonempty_list(COMMA,typed_ident)

State 22:
## Known stack suffix:
## typ IDENT LPAR loption(separated_nonempty_list(COMMA,typed_ident))
## LR(1) items:
fun_def -> typ IDENT LPAR loption(separated_nonempty_list(COMMA,typed_ident)) . RPAR BEGIN list(variable_decl) list(instruction) END [ VAR METHOD FUNCTION EOF END CLASS ]
## Transitions:
-- On RPAR shift to state 23
## Reductions:

State 23:
## Known stack suffix:
## typ IDENT LPAR loption(separated_nonempty_list(COMMA,typed_ident)) RPAR
## LR(1) items:
fun_def -> typ IDENT LPAR loption(separated_nonempty_list(COMMA,typed_ident)) RPAR . BEGIN list(variable_decl) list(instruction) END [ VAR METHOD FUNCTION EOF END CLASS ]
## Transitions:
-- On BEGIN shift to state 24
## Reductions:

State 24:
## Known stack suffix:
## typ IDENT LPAR loption(separated_nonempty_list(COMMA,typed_ident)) RPAR BEGIN
## LR(1) items:
fun_def -> typ IDENT LPAR loption(separated_nonempty_list(COMMA,typed_ident)) RPAR BEGIN . list(variable_decl) list(instruction) END [ VAR METHOD FUNCTION EOF END CLASS ]
## Transitions:
-- On VAR shift to state 2
-- On variable_decl shift to state 25
-- On list(variable_decl) shift to state 27
## Reductions:
-- On WHILE THIS RETURN PUTCHAR NEW LPAR IF IDENT END CST BOOL
--   reduce production list(variable_decl) ->

State 25:
## Known stack suffix:
## variable_decl
## LR(1) items:
list(variable_decl) -> variable_decl . list(variable_decl) [ WHILE THIS RETURN PUTCHAR NEW LPAR IF IDENT END CST BOOL ]
## Transitions:
-- On VAR shift to state 2
-- On variable_decl shift to state 25
-- On list(variable_decl) shift to state 26
## Reductions:
-- On WHILE THIS RETURN PUTCHAR NEW LPAR IF IDENT END CST BOOL
--   reduce production list(variable_decl) ->

State 26:
## Known stack suffix:
## variable_decl list(variable_decl)
## LR(1) items:
list(variable_decl) -> variable_decl list(variable_decl) . [ WHILE THIS RETURN PUTCHAR NEW LPAR IF IDENT END CST BOOL ]
## Transitions:
## Reductions:
-- On WHILE THIS RETURN PUTCHAR NEW LPAR IF IDENT END CST BOOL
--   reduce production list(variable_decl) -> variable_decl list(variable_decl)

State 27:
## Known stack suffix:
## typ IDENT LPAR loption(separated_nonempty_list(COMMA,typed_ident)) RPAR BEGIN list(variable_decl)
## LR(1) items:
fun_def -> typ IDENT LPAR loption(separated_nonempty_list(COMMA,typed_ident)) RPAR BEGIN list(variable_decl) . list(instruction) END [ VAR METHOD FUNCTION EOF END CLASS ]
## Transitions:
-- On WHILE shift to state 28
-- On THIS shift to state 30
-- On RETURN shift to state 72
-- On PUTCHAR shift to state 75
-- On NEW shift to state 31
-- On LPAR shift to state 35
-- On IF shift to state 80
-- On IDENT shift to state 85
-- On CST shift to state 38
-- On BOOL shift to state 39
-- On mem_access shift to state 89
-- On list(instruction) shift to state 105
-- On instruction shift to state 99
-- On expression shift to state 101
## Reductions:
-- On END
--   reduce production list(instruction) ->

State 28:
## Known stack suffix:
## WHILE
## LR(1) items:
instruction -> WHILE . LPAR expression RPAR BEGIN list(instruction) END [ WHILE THIS RETURN PUTCHAR NEW LPAR IF IDENT END CST BOOL ]
## Transitions:
-- On LPAR shift to state 29
## Reductions:

State 29:
## Known stack suffix:
## WHILE LPAR
## LR(1) items:
instruction -> WHILE LPAR . expression RPAR BEGIN list(instruction) END [ WHILE THIS RETURN PUTCHAR NEW LPAR IF IDENT END CST BOOL ]
## Transitions:
-- On THIS shift to state 30
-- On NEW shift to state 31
-- On LPAR shift to state 35
-- On IDENT shift to state 36
-- On CST shift to state 38
-- On BOOL shift to state 39
-- On mem_access shift to state 41
-- On expression shift to state 69
## Reductions:

State 30:
## Known stack suffix:
## THIS
## LR(1) items:
expression -> THIS . [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
## Transitions:
## Reductions:
-- On STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA
--   reduce production expression -> THIS

State 31:
## Known stack suffix:
## NEW
## LR(1) items:
expression -> NEW . IDENT LPAR loption(separated_nonempty_list(COMMA,expression)) RPAR [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
expression -> NEW . LBRACKET typ COMMA expression RBRACKET [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
## Transitions:
-- On LBRACKET shift to state 32
-- On IDENT shift to state 65
## Reductions:

State 32:
## Known stack suffix:
## NEW LBRACKET
## LR(1) items:
expression -> NEW LBRACKET . typ COMMA expression RBRACKET [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
## Transitions:
-- On TYP_VOID shift to state 3
-- On TYP_INT shift to state 4
-- On TYP_BOOL shift to state 5
-- On LBRACKET shift to state 6
-- On IDENT shift to state 7
-- On typ shift to state 33
## Reductions:

State 33:
## Known stack suffix:
## NEW LBRACKET typ
## LR(1) items:
expression -> NEW LBRACKET typ . COMMA expression RBRACKET [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
## Transitions:
-- On COMMA shift to state 34
## Reductions:

State 34:
## Known stack suffix:
## NEW LBRACKET typ COMMA
## LR(1) items:
expression -> NEW LBRACKET typ COMMA . expression RBRACKET [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
## Transitions:
-- On THIS shift to state 30
-- On NEW shift to state 31
-- On LPAR shift to state 35
-- On IDENT shift to state 36
-- On CST shift to state 38
-- On BOOL shift to state 39
-- On mem_access shift to state 41
-- On expression shift to state 63
## Reductions:

State 35:
## Known stack suffix:
## LPAR
## LR(1) items:
expression -> LPAR . expression RPAR [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
## Transitions:
-- On THIS shift to state 30
-- On NEW shift to state 31
-- On LPAR shift to state 35
-- On IDENT shift to state 36
-- On CST shift to state 38
-- On BOOL shift to state 39
-- On mem_access shift to state 41
-- On expression shift to state 61
## Reductions:

State 36:
## Known stack suffix:
## IDENT
## LR(1) items:
expression -> IDENT . [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
expression -> IDENT . LPAR loption(separated_nonempty_list(COMMA,expression)) RPAR [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
## Transitions:
-- On LPAR shift to state 37
## Reductions:
-- On STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA
--   reduce production expression -> IDENT

State 37:
## Known stack suffix:
## IDENT LPAR
## LR(1) items:
expression -> IDENT LPAR . loption(separated_nonempty_list(COMMA,expression)) RPAR [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
## Transitions:
-- On THIS shift to state 30
-- On NEW shift to state 31
-- On LPAR shift to state 35
-- On IDENT shift to state 36
-- On CST shift to state 38
-- On BOOL shift to state 39
-- On separated_nonempty_list(COMMA,expression) shift to state 40
-- On mem_access shift to state 41
-- On loption(separated_nonempty_list(COMMA,expression)) shift to state 42
-- On expression shift to state 44
## Reductions:
-- On RPAR
--   reduce production loption(separated_nonempty_list(COMMA,expression)) ->

State 38:
## Known stack suffix:
## CST
## LR(1) items:
expression -> CST . [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
## Transitions:
## Reductions:
-- On STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA
--   reduce production expression -> CST

State 39:
## Known stack suffix:
## BOOL
## LR(1) items:
expression -> BOOL . [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
## Transitions:
## Reductions:
-- On STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA
--   reduce production expression -> BOOL

State 40:
## Known stack suffix:
## separated_nonempty_list(COMMA,expression)
## LR(1) items:
loption(separated_nonempty_list(COMMA,expression)) -> separated_nonempty_list(COMMA,expression) . [ RPAR ]
## Transitions:
## Reductions:
-- On RPAR
--   reduce production loption(separated_nonempty_list(COMMA,expression)) -> separated_nonempty_list(COMMA,expression)

State 41:
## Known stack suffix:
## mem_access
## LR(1) items:
expression -> mem_access . [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
## Transitions:
## Reductions:
-- On STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA
--   reduce production expression -> mem_access

State 42:
## Known stack suffix:
## IDENT LPAR loption(separated_nonempty_list(COMMA,expression))
## LR(1) items:
expression -> IDENT LPAR loption(separated_nonempty_list(COMMA,expression)) . RPAR [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
## Transitions:
-- On RPAR shift to state 43
## Reductions:

State 43:
## Known stack suffix:
## IDENT LPAR loption(separated_nonempty_list(COMMA,expression)) RPAR
## LR(1) items:
expression -> IDENT LPAR loption(separated_nonempty_list(COMMA,expression)) RPAR . [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
## Transitions:
## Reductions:
-- On STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA
--   reduce production expression -> IDENT LPAR loption(separated_nonempty_list(COMMA,expression)) RPAR

State 44:
## Known stack suffix:
## expression
## LR(1) items:
expression -> expression . PLUS expression [ STAR RPAR PLUS LT LBRACKET DOT COMMA ]
expression -> expression . STAR expression [ STAR RPAR PLUS LT LBRACKET DOT COMMA ]
expression -> expression . LT expression [ STAR RPAR PLUS LT LBRACKET DOT COMMA ]
expression -> expression . DOT IDENT LPAR loption(separated_nonempty_list(COMMA,expression)) RPAR [ STAR RPAR PLUS LT LBRACKET DOT COMMA ]
mem_access -> expression . LBRACKET expression RBRACKET [ STAR RPAR PLUS LT LBRACKET DOT COMMA ]
mem_access -> expression . DOT IDENT [ STAR RPAR PLUS LT LBRACKET DOT COMMA ]
separated_nonempty_list(COMMA,expression) -> expression . [ RPAR ]
separated_nonempty_list(COMMA,expression) -> expression . COMMA separated_nonempty_list(COMMA,expression) [ RPAR ]
## Transitions:
-- On STAR shift to state 45
-- On PLUS shift to state 50
-- On LT shift to state 57
-- On LBRACKET shift to state 47
-- On DOT shift to state 52
-- On COMMA shift to state 59
## Reductions:
-- On RPAR
--   reduce production separated_nonempty_list(COMMA,expression) -> expression

State 45:
## Known stack suffix:
## expression STAR
## LR(1) items:
expression -> expression STAR . expression [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
## Transitions:
-- On THIS shift to state 30
-- On NEW shift to state 31
-- On LPAR shift to state 35
-- On IDENT shift to state 36
-- On CST shift to state 38
-- On BOOL shift to state 39
-- On mem_access shift to state 41
-- On expression shift to state 46
## Reductions:

State 46:
## Known stack suffix:
## expression STAR expression
## LR(1) items:
expression -> expression . PLUS expression [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
expression -> expression . STAR expression [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
expression -> expression STAR expression . [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
expression -> expression . LT expression [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
expression -> expression . DOT IDENT LPAR loption(separated_nonempty_list(COMMA,expression)) RPAR [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
mem_access -> expression . LBRACKET expression RBRACKET [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
mem_access -> expression . DOT IDENT [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
## Transitions:
-- On LBRACKET shift to state 47
-- On DOT shift to state 52
## Reductions:
-- On STAR SEMI RPAR RBRACKET PLUS LT COMMA
--   reduce production expression -> expression STAR expression

State 47:
## Known stack suffix:
## expression LBRACKET
## LR(1) items:
mem_access -> expression LBRACKET . expression RBRACKET [ STAR SET SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
## Transitions:
-- On THIS shift to state 30
-- On NEW shift to state 31
-- On LPAR shift to state 35
-- On IDENT shift to state 36
-- On CST shift to state 38
-- On BOOL shift to state 39
-- On mem_access shift to state 41
-- On expression shift to state 48
## Reductions:

State 48:
## Known stack suffix:
## expression LBRACKET expression
## LR(1) items:
expression -> expression . PLUS expression [ STAR RBRACKET PLUS LT LBRACKET DOT ]
expression -> expression . STAR expression [ STAR RBRACKET PLUS LT LBRACKET DOT ]
expression -> expression . LT expression [ STAR RBRACKET PLUS LT LBRACKET DOT ]
expression -> expression . DOT IDENT LPAR loption(separated_nonempty_list(COMMA,expression)) RPAR [ STAR RBRACKET PLUS LT LBRACKET DOT ]
mem_access -> expression . LBRACKET expression RBRACKET [ STAR RBRACKET PLUS LT LBRACKET DOT ]
mem_access -> expression LBRACKET expression . RBRACKET [ STAR SET SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
mem_access -> expression . DOT IDENT [ STAR RBRACKET PLUS LT LBRACKET DOT ]
## Transitions:
-- On STAR shift to state 45
-- On RBRACKET shift to state 49
-- On PLUS shift to state 50
-- On LT shift to state 57
-- On LBRACKET shift to state 47
-- On DOT shift to state 52
## Reductions:

State 49:
## Known stack suffix:
## expression LBRACKET expression RBRACKET
## LR(1) items:
mem_access -> expression LBRACKET expression RBRACKET . [ STAR SET SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
## Transitions:
## Reductions:
-- On STAR SET SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA
--   reduce production mem_access -> expression LBRACKET expression RBRACKET

State 50:
## Known stack suffix:
## expression PLUS
## LR(1) items:
expression -> expression PLUS . expression [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
## Transitions:
-- On THIS shift to state 30
-- On NEW shift to state 31
-- On LPAR shift to state 35
-- On IDENT shift to state 36
-- On CST shift to state 38
-- On BOOL shift to state 39
-- On mem_access shift to state 41
-- On expression shift to state 51
## Reductions:

State 51:
## Known stack suffix:
## expression PLUS expression
## LR(1) items:
expression -> expression . PLUS expression [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
expression -> expression PLUS expression . [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
expression -> expression . STAR expression [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
expression -> expression . LT expression [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
expression -> expression . DOT IDENT LPAR loption(separated_nonempty_list(COMMA,expression)) RPAR [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
mem_access -> expression . LBRACKET expression RBRACKET [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
mem_access -> expression . DOT IDENT [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
## Transitions:
-- On STAR shift to state 45
-- On LBRACKET shift to state 47
-- On DOT shift to state 52
## Reductions:
-- On SEMI RPAR RBRACKET PLUS LT COMMA
--   reduce production expression -> expression PLUS expression

State 52:
## Known stack suffix:
## expression DOT
## LR(1) items:
expression -> expression DOT . IDENT LPAR loption(separated_nonempty_list(COMMA,expression)) RPAR [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
mem_access -> expression DOT . IDENT [ STAR SET SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
## Transitions:
-- On IDENT shift to state 53
## Reductions:

State 53:
## Known stack suffix:
## expression DOT IDENT
## LR(1) items:
expression -> expression DOT IDENT . LPAR loption(separated_nonempty_list(COMMA,expression)) RPAR [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
mem_access -> expression DOT IDENT . [ STAR SET SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
## Transitions:
-- On LPAR shift to state 54
## Reductions:
-- On STAR SET SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA
--   reduce production mem_access -> expression DOT IDENT

State 54:
## Known stack suffix:
## expression DOT IDENT LPAR
## LR(1) items:
expression -> expression DOT IDENT LPAR . loption(separated_nonempty_list(COMMA,expression)) RPAR [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
## Transitions:
-- On THIS shift to state 30
-- On NEW shift to state 31
-- On LPAR shift to state 35
-- On IDENT shift to state 36
-- On CST shift to state 38
-- On BOOL shift to state 39
-- On separated_nonempty_list(COMMA,expression) shift to state 40
-- On mem_access shift to state 41
-- On loption(separated_nonempty_list(COMMA,expression)) shift to state 55
-- On expression shift to state 44
## Reductions:
-- On RPAR
--   reduce production loption(separated_nonempty_list(COMMA,expression)) ->

State 55:
## Known stack suffix:
## expression DOT IDENT LPAR loption(separated_nonempty_list(COMMA,expression))
## LR(1) items:
expression -> expression DOT IDENT LPAR loption(separated_nonempty_list(COMMA,expression)) . RPAR [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
## Transitions:
-- On RPAR shift to state 56
## Reductions:

State 56:
## Known stack suffix:
## expression DOT IDENT LPAR loption(separated_nonempty_list(COMMA,expression)) RPAR
## LR(1) items:
expression -> expression DOT IDENT LPAR loption(separated_nonempty_list(COMMA,expression)) RPAR . [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
## Transitions:
## Reductions:
-- On STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA
--   reduce production expression -> expression DOT IDENT LPAR loption(separated_nonempty_list(COMMA,expression)) RPAR

State 57:
## Known stack suffix:
## expression LT
## LR(1) items:
expression -> expression LT . expression [ STAR SEMI RPAR RBRACKET PLUS LT LBRACKET DOT COMMA ]
## Transitions:
-- On THIS shift to state 30
-- On NEW shift to state 31
-- On LPAR shift to state 35
-- On IDENT shift to state 36
-- On CST shift to state 38
-- On BOOL shift to state 39
-- On mem_access shift to state 41
-- On expression shift to state 58
## Reductions:
